Har begun to integrate code from the other project

--- a/index.html
+++ b/index.html
@@ -19,15 +19,47 @@
       <div class="collapsible">
         <input type="checkbox" id="collapsible-head" />
         <label for="collapsible-head">Collapsible Using Only HTML CSS</label>
-        <div class="collapsible-text">
-          <h2>Collapsible Heading</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere
-            velit ullam maxime, incidunt nulla porro odio ipsa. Dolor in
-            architecto, vero tenetur, obcaecati voluptate facere minima eaque
-            sapiente, harum ducimus atque expedita rerum? Illo ipsam quae eaque
-            saepe fuga consequatur.
-          </p>
+        <div class="collapsible-section">
+                                      <div class="section-one-container">
+                                        <div class="content-container-left">
+                                            <div class="section-one-data-row">
+                                                <div class="category-text">Yta</div>
+                                                <div class="value-text">Väg</div>
+                                            </div>
+                                            <div class="section-one-data-row">
+                                                <div class="category-text">Häldrop</div>
+                                                <div class="value-text">6.8 mm</div>
+                                            </div>
+                                            <div class="section-one-data-row">
+                                                <div class="category-text">Vikt</div>
+                                                <div class="value-text">205 g/7.2 oz</div>
+                                            </div>
+                                        </div>
+                                        <div class="content-container-right">
+                                            <div class="progress-bar-wrapper">
+
+                                                <div class="progress-bar-container">
+                                                    <div class="text-container-progress-bar">
+                                                        <div class="bold-text">Stöd</div>
+                                                        <div>Neutral</div>
+                                                    </div>
+                                                    <div class="progress-bar-section">
+                                                        <div class="progress-bar support"></div>
+                                                    </div>
+                                                </div>
+
+                                                <div class="progress-bar-container">
+                                                    <div class="text-container-progress-bar">
+                                                        <div class="bold-text">Dämpning</div>
+                                                        <div>Max</div>
+                                                    </div>
+                                                    <div class="progress-bar-section">
+                                                        <div class="progress-bar cushioning"></div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+        </div>
         </div>
       </div>
     </div>
